--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -67,6 +67,11 @@ services:
     #         MYSQL_PASSWORD: laravel_db_pass
 
     ####################################################################################################
+    # Pg dababase
+    ####################################################################################################
+    
+
+    ####################################################################################################
     # Mailpit
     ####################################################################################################
     mail:
