--- a/package.json
+++ b/package.json
@@ -2,12 +2,15 @@
     "private": true,
     "type": "module",
     "scripts": {
-        "dev": "vite",
-        "build": "vite build"
+        "build": "vite build",
+        "dev": "vite"
     },
     "devDependencies": {
+        "@tailwindcss/vite": "^4.0.0",
         "axios": "^1.8.2",
+        "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.2.0",
-        "vite": "^6.2.5"
+        "tailwindcss": "^4.0.0",
+        "vite": "^6.2.4"
     }
 }
